--- a/work-safe/package.json
+++ b/work-safe/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
