landing page update

--- a/work-safe/angular.json
+++ b/work-safe/angular.json
@@ -118,8 +118,13 @@
               "devServerTarget": "work-safe:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "work-safe"
 }
